# authgate

./: .env.dist  CONTRIBUTING.md  README.md  docker-compose.yml  run.sh
.github/workflows/: publish.yml
admin/: Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json  package.json  prettier.config.js  vite.config.ts
admin/src/: App.tsx  index.css
admin/src/api/: client.ts
admin/src/components/: ConfirmDialog.tsx  ErrorMessage.tsx  Layout.tsx  LoadingSpinner.tsx  RouteForm.tsx
admin/src/pages/: HomePage.tsx  NotFoundPage.tsx  RouteCreatePage.tsx  RouteDetailPage.tsx  RouteEditPage.tsx  RoutesListPage.tsx
admin/src/types/: index.ts
authgate/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  authgate.json
authgate/examples/: README.md  authgate.json  traefik-docker-compose.yml
authgate/migrations/: 20250517000000_initial_schema.sql
authgate/src/: admin.rs  auth.rs  cache.rs  config.rs  config_provider.rs  config_provider_mock.rs  lib.rs  main.rs  matcher.rs  proxy.rs  types.rs
authgate/tests/: admin_session_test.rs  admin_test.rs  auth_test.rs  cache_integration_test.rs  cache_test.rs  config_provider_test.rs  config_test.rs  integration_test.rs  matcher_test.rs  proxy_test.rs
