[package]
name = "authgate"
version = "0.1.0"
edition = "2021"
description = "A standalone Traefik forwardAuth middleware for authentication and authorization"
authors = ["OpenHands <openhands@all-hands.dev>"]
license = "MIT"

[features]
default = ["postgres"]
postgres = ["sqlx/postgres"]
config_reload = []

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { version = "1.1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.0"
http-body-util = "0.1"
reqwest = { version = "0.11", features = ["json"] }
dotenvy = "0.15"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1.36", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# URL handling
url = "2.5"
base64 = "0.21"

# File watching (for config reloading)
notify = "6.1"

# Caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
jsonwebtoken = "9.2"

# Utilities
futures = "0.3"
async-trait = "0.1"
regex = "1.10"
once_cell = "1.19"
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres", "json", "macros", "migrate"] }

[dev-dependencies]
tempfile = "3.10"